--- a/autoCoder/window.scss
+++ b/autoCoder/window.scss
@@ -54,6 +54,7 @@ body {
     color: white;
     background-color: $inputWindowColor;
     border-radius: $windowRadius $windowRadius 0 0;
+    position: relative;
 }
 
 #main-window-output {
@@ -164,4 +165,22 @@ body {
 
 #backElement, .colon, #div-element-as-text, .dot, .textContent, .equal-element, .typescriptTextContent, #scss-autotype-2, .comma, #scss-autotype-1 {
     display: none;
+}
+
+.windowName-output, #buttons, .windowName-input{
+    display: inline-block;
+}
+
+.windowName-output, .windowName-input{
+    color: #363637;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 3px;
+}
+
+.windowName-input {
+    color: white;
 }
