--- a/3D grid/grid.scss
+++ b/3D grid/grid.scss
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -32,14 +31,10 @@ body {
     visibility: hidden;
 }
 
-.grid-unit:hover {
-    opacity: 0.5;
-}
-
 .animated-unit {
     animation-name: flashing;
     animation-iteration-count: infinite;
-    animation-duration: 5s;
+    animation-duration: 3s;
 }
 
 .animated-unit-1 {
@@ -50,7 +45,63 @@ body {
     animation-delay: 0.4s;
 }
 
+.text-3d-1 {
+    color: white;
+    font-size: 20vw;
+    display: inline;
+    text-shadow: 
+    1px 1px 1px #919191,
+    1px 2px 1px #919191,
+    1px 3px 1px #919191,
+    1px 4px 1px #919191,
+    1px 5px 1px #919191,
+    1px 6px 1px #919191,
+    1px 7px 1px #919191,
+    1px 8px 1px #919191,
+    1px 9px 1px #919191,
+    1px 10px 1px#919191,
+    1px 18px 6px  rgba(16, 16, 16,  $alpha: 0.4),
+    1px 22px 10px rgba(16, 16, 16,  $alpha: 0.2),
+    1px 25px 35px rgba(16, 16, 16,  $alpha: 0.2),
+    1px 30px 60px rgba(16, 16, 16,  $alpha: 0.4);
+    position: relative;
+    top: 50%;
+    left: 47%;
+    transform: translate(-50%, -50%);
+}
+
+.text-3d-2 {
+    font-size: 15vw;
+    text-align: center;
+    display: inline-block;
+    text-shadow: 2px 2px 5px black;
+    color: rgba($color: #000000, $alpha: 0);
+    width: 20%;
+    position: relative;
+    top: 0;
+    left: 27%;
+    transform: rotateX(12deg);
+    z-index: -1;
+}
+
+.heading-container {
+    position: absolute;
+    width: 45%;
+    perspective: 4em;
+    display: block;
+    opacity: 0;
+    animation-name: turning;
+    animation-iteration-count: infinite;
+    animation-duration: 3s;
+    animation-direction: alternate;
+}
+
 @keyframes flashing {
     0%{ box-shadow: 2px 2px 20px 2px white; }
     10%{ box-shadow: none; }
+}
+
+@keyframes turning {
+    from {transform: rotateY(2deg);}
+    to {transform: rotateY(-2deg);}
 }
