--- a/Skills/skills.scss
+++ b/Skills/skills.scss
@@ -39,107 +39,107 @@ html, body {
 }
 
 @keyframes moving {
-    3% {
-        top: 70%;
-    }
     4% {
+        top: 70%; //LONG
+    }
+    8% {
         top: 72%;
         font-size: 1.9vw;
     }
-    5% {
+    12% {
         top: 74%;
         font-size: 1.8vw;
     }
-    6% {
+    16% {
         top: 76%;
         font-size: 1.7vw;
     }
-    7% {
+    20% {
         top: 78%;
         font-size: 1.6vw;
     }
-    8% {
+    24% {
         top: 80%;
         font-size: 1.5vw;
     }
-    10% {
+    28% {
         font-size: 1.3vw;
     }
-    13% {
+    32% {
         top: 78%;
         font-size: 1.2vw;
     }
-    15% {
+    36% {
         top: 76%;
         font-size: 1.1vw;
     }
-    18% {
+    40% {
         top: 74%;
         font-size: 1vw;
     }
-    22% {
+    44% {
         top: 72%;
         font-size: 0.9vw;
     }
-    25% {
+    48% {
         top: 70%;
         font-size: 0.8vw;
     }
-    40% {
-        top: 50%;
+    52% {
+        top: 50%; //LONG
         font-size: 0.4vw;
     }
-    50% {
-        top: 30%;
+    56% {
+        top: 30%; //LONG
         font-size: 0.8vw;
     }
-    53% {
+    60% {
         top: 28%;
         font-size: 0.9vw;
 
     }
-    56% {
+    64% {
         top: 26%;
         font-size: 1vw;
 
     }
-    59% {
+    68% {
         top: 24%;
         font-size: 1.1vw;
 
     }
-    62% {
+    72% {
         top: 22%;
         font-size: 1.2vw;
 
     }
-    65% {
+    76% {
         top: 20%;
         font-size: 1.3vw;
 
     }
-    68% {
+    80% {
         top: 22%;
         font-size: 1.5vw;
     }
-    71% {
+    84% {
         top: 24%;
         font-size: 1.6vw;
     }
-    74% {
+    88% {
         top: 26%;
         font-size: 1.7vw;
     }
-    77% {
+    92% {
         top: 28%;
         font-size: 1.8vw;
     }
-    80% {
+    96% {
         top: 30%;
         font-size: 2vw;
     }
     100% {
-        top: 50%;
+        top: 50%; //LONG
         font-size: 3vw;
     }
 }
