--- a/farming tracker/src/app.css
+++ b/farming tracker/src/app.css
@@ -24,7 +24,14 @@ input {
     background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid rgba(255, 255, 255, 0.5);
     outline: none;
-    color: aqua;
+}
+
+#plant-type-input {
+    color: aquamarine;
+}
+
+#plant-growth-time-input {
+    color:beige;
 }
 
 input:focus {
