Local storage + code reduce
- Reduced code in Time component
-2  useEffect hooks added, local storage loads on 1st render & saves each time 'plant' hook updates

--- a/farming tracker/src/app.css
+++ b/farming tracker/src/app.css
@@ -81,3 +81,8 @@ button:hover {
 .time-title {
     color: lightgreen;
 }
+
+.item {
+    border-bottom: 0.1vw solid lightgreen;
+    margin-top: 2vw;
+}
