--- a/farming tracker/src/app.css
+++ b/farming tracker/src/app.css
@@ -86,3 +86,9 @@ button:hover {
     border-bottom: 0.1vw solid lightgreen;
     margin-top: 2vw;
 }
+
+.myButton {
+    position: fixed;
+    right: 5%;
+    color: rgb(248, 134, 134);
+}
